--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/ui": "^3.2",
         "livewire/livewire": "^2.4",
         "maatwebsite/excel": "^3.1",
+        "pusher/pusher-php-server": "^7.2",
         "spatie/laravel-permission": "^4.1",
         "stripe/stripe-php": "^15.7"
     },
