--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.9",
+        "laravel-notification-channels/fcm": "^2.7",
         "laravel/framework": "^8.12",
         "laravel/sanctum": "^2.15",
         "laravel/tinker": "^2.5",
