--- a/.gitignore
+++ b/.gitignore
@@ -10,4 +10,4 @@ docker-compose.override.yml
 Homestead.json
 Homestead.yaml
 npm-debug.log
-yarn-error.log
+yarn-error.logapp/google_service_account.json
