Agregado google_service_account.json al .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ Homestead.yaml
 npm-debug.log
 yarn-error.logapp/google_service_account.json
 app/google_service_account.json
+app/google_service_account.json
