--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ npm-debug.log
 yarn-error.logapp/google_service_account.json
 app/google_service_account.json
 app/google_service_account.json
+app/google_service_account.json
