Agregado google_service_account.json al .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ yarn-error.logapp/google_service_account.json
 app/google_service_account.json
 app/google_service_account.json
 app/google_service_account.json
+app/google_service_account.json
